--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -25,10 +25,10 @@
       </div>
       <div class="profile-username-action-btns">
         <p class="profile-username">{{ user_profile.username }}</p>
-        <div class="profile-action-btns">
+        <!-- <div class="profile-action-btns">
           <button class="follow">Follow</button>
           <button class="message">Message</button>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="info">
