--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -562,4 +562,29 @@ main#feed .posts .post .post-date {
   font-weight: 300;
   font-size: 0.8rem;
   padding-top: 8px;
+}
+
+main#connect a {
+  text-decoration: none;
+}
+main#connect a .user-info {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  background-color: hotpink;
+}
+main#connect a .user-info .user-photo {
+  width: 100px;
+  height: 100px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transform: scale(0.8);
+  border-radius: 50%;
+  border: 1px solid #000000;
+}
+main#connect a .user-info p {
+  margin: 0;
+}
+main#connect a .user-info .username {
+  font-weight: 700;
 }/*# sourceMappingURL=styles.css.map */
