--- a/app/project/community/templates/community/connect.html
+++ b/app/project/community/templates/community/connect.html
@@ -3,15 +3,16 @@
   <h2>Connect</h2>
 
   {% for user_profile_id, user_profile_data in user_profiles_data.items %}
-  <div>
-    <p>{{ user_profile_id }}</p>
-    <p>{{ user_profile_data.username }}</p>
-    <img src="{{ user_profile_data.profile_picture }}" alt="" />
-    <p>{{ user_profile_data.profile_name }}</p>
-    <a href="{% url 'community:user' user_profile_id=user_profile_id %}"
-      >View profile</a
-    >
-  </div>
+  <a href="{% url 'community:user' user_profile_id=user_profile_id %}">
+    <div class="user-info">
+      <img class="user-photo" src="{{ user_profile_data.profile_picture }}" alt="" />
+      <div class="user-dets">
+        <p class="username">{{ user_profile_data.username }}</p>
+        <p class="name">{{ user_profile_data.profile_name }}</p>
+        <p class="following">Not following</p>
+      </div>
+    </div>
+  </a>
   {% endfor %}
 </main>
 {% endblock %}
