--- a/app/project/community/templates/community/connect.html
+++ b/app/project/community/templates/community/connect.html
@@ -2,7 +2,7 @@
 <main id="connect">
   <h2>Connect</h2>
   <!-- Search Form -->
-  <form action="" method="get">
+  <form class="search-form" action="" method="get">
     <input type="text" name="user-search" placeholder="Search users" value="{{ search_query }}">
     <button type="submit">Search</button>
   </form>
