--- a/app/project/community/templates/community/connect.html
+++ b/app/project/community/templates/community/connect.html
@@ -15,7 +15,11 @@
         <div class="user-dets">
           <p class="username">{{ user_profile_data.username }}</p>
           <p class="name">{{ user_profile_data.profile_name }}</p>
+          {% if request_profile_id ==  user_profile_id%}
+          <p class="following">Your profile</p>
+          {% else %}
           <p class="following">Not following</p>
+          {% endif %}
         </div>
       </div>
     </a>
