--- a/app/project/community/templates/community/user.html
+++ b/app/project/community/templates/community/user.html
@@ -9,6 +9,7 @@
 <script src="{% static './community/scripts/toggle-posts.js' %}" defer></script>
 <script src="{% static './community/scripts/view-post.js' %}" defer></script>
 <script src="{% static './community/scripts/post-menu.js' %}" defer></script>
+<script src="{% static './community/scripts/follow-unfollow.js' %}" defer></script>
 {% endblock %}
 {% block content %}
 {% if user_profile %}
