--- a/app/project/community/templates/community/feed.html
+++ b/app/project/community/templates/community/feed.html
@@ -8,6 +8,7 @@
 <script src="{% static './community/scripts/create-post.js' %}" defer></script>
 <script src="{% static './community/scripts/post-menu.js' %}" defer></script>
 <script src="{% static './community/scripts/edit-delete-post.js' %}" defer></script>
+<script src="{% static './community/scripts/toggle-comment-form.js' %}" defer></script>
 {% endblock %}
 {% block content %}
 
@@ -54,9 +55,11 @@
             <span class="caption-text">{{ post.post_caption }}</span>
           </div>
           <!-- Comment form -->
-          <form method="post" action="">
+          <form class="comment-form hide-comment-form" method="post" action="">
             {% csrf_token %}
-            {{ comment_form.as_p }}
+            <div class="form-elements">
+              {{ comment_form.as_p }}
+            </div>
             <button type="submit" name="comment-submit">Post Comment</button>
           </form>
           {% for comment in post.comments.all %}
