--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -363,6 +363,7 @@ main#profile .modal .modal-content .post .comment-form .close-btn:hover {
 main#profile .modal .modal-content .post .comment-form .form-elements p {
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
 }
 main#profile .modal .modal-content .post .comment-form .form-elements p label {
   display: none;
@@ -371,6 +372,9 @@ main#profile .modal .modal-content .post .comment-form button {
   width: 300px;
 }
 main#profile .modal .modal-content .post .hide-comment-form {
+  display: none;
+}
+main#profile .modal .modal-content .post #id_post, main#profile .modal .modal-content .post #id_user_profile {
   display: none;
 }
 main#profile .modal .modal-content .post .post-comments {
@@ -598,6 +602,7 @@ main#feed .posts .post .comment-form .close-btn:hover {
 main#feed .posts .post .comment-form .form-elements p {
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
 }
 main#feed .posts .post .comment-form .form-elements p label {
   display: none;
@@ -606,6 +611,9 @@ main#feed .posts .post .comment-form button {
   width: 300px;
 }
 main#feed .posts .post .hide-comment-form {
+  display: none;
+}
+main#feed .posts .post #id_post, main#feed .posts .post #id_user_profile {
   display: none;
 }
 main#feed .posts .post .post-comments {
