--- a/app/project/tennis/static/tennis/styles/styles.scss
+++ b/app/project/tennis/static/tennis/styles/styles.scss
@@ -1,6 +1,7 @@
 // @import './variables';
 // @import './mixins';
 // @import './global';
+@import './base';
 // @import './profile';
 // @import './feed';
 // @import './connect';
